# gsoap

./: changelog.md  gsoap++.pc.in  gsoap.pc.in  gsoap.spec  gsoapck++.pc.in  gsoapck.pc.in  gsoapssl++.pc.in  gsoapssl.pc.in
autom4te.cache/: requests
gsoap/VisualStudio2005/soapcpp2/soapcpp2/: soapcpp2.h
gsoap/VisualStudio2005/wsdl2h/wsdl2h/: includes.h  service.cpp  wsdl2h.cpp  wsdlC.cpp  wsdlH.h  wsdlStub.h
gsoap/doc/guide/: index.md  stdsoap2.h
gsoap/doc/guide/html/: annotated.html  classes.html  files.html  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_h.html  functions_i.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_type.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_a.html  functions_vars_b.html  (+96 more)
gsoap/samples/async/: async.wsdl
gsoap/samples/calc_xcode/: soapC.cpp  soapStub.h
gsoap/samples/mashup/: mashup.h
gsoap/samples/mashup++/: mashup.hpp
gsoap/samples/ssl/: ssl.wsdl
gsoap/samples/tcp/: tcpdemo.wsdl
gsoap/samples/udp/: udp.wsdl
gsoap/src/: soapcpp2.c  symbol2.c
sample/gsoap_calc/: Makefile.am  Makefile.in  auto_build  build.sh  calc.h  calcclient.cpp  config.h.in  configure  configure.ac  soapC.cpp  soapH.h  soapStub.h  soapcalcProxy.cpp  soapcalcProxy.h
sample/gsoap_calc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
(+196 files in other folders)
